# PreColOneSided

./: .gitignore  CMakeLists.txt  README.md
src/: bipartite_graph.cpp  bipartite_graph.hpp  coloring.cpp  coloring.hpp  main.cpp  mtx_reader.cpp  mtx_reader.hpp  required_edges.cpp  required_edges.hpp
stats/: compare.py  julia_color.jl  observations.md  visualize.py
tests/: test_bipartite_graph.cpp  test_coloring.cpp  test_mtx_reader.cpp  test_restricted_coloring.cpp
